--- a/src/main/configs/new_sth_sth_exp_pret.yaml
+++ b/src/main/configs/new_sth_sth_exp_pret.yaml
@@ -1,28 +1,28 @@
 paths:
-  videos_folder: &vidpath /data/20bn-somethingsomething/videos_npz
-  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/ckp_new_sth2/
+  videos_folder: &vidpath /data-ssd/videos_gulp/
+  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/ckp_new_sth_lbl_switched_unfrozen_gulp_TF/
 
   train_annot: &train_annot /data/20bn-somethingsomething/json/train_20170929.json.gz
   validation_annot: /data/20bn-somethingsomething/json/validation_20170929.json.gz
   test_annot: /data/20bn-somethingsomething/json/test_20170929.json.gz
 
 pretrained:
-  pretrained_folder:
-  pretrained_file:
+  pretrained_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/ckp_new_sth_lbl_switched_unfrozen_gulp/
+  pretrained_file: model.latest
 
 device:
   synchronize_gpu: &sync True
   gpus: &gpus [0]
 
 dataloaders:
-  kwargs: {batch_size: 16, num_workers: 16, pin_memory: False}
+  kwargs: {batch_size: 16, num_workers: 8, pin_memory: False}
 
 model:
   type: EncoderDecoder
   encoder: FCEncoder
   encoder_args:
   encoder_kwargs: {pretrained_path: /home/farzaneh/PycharmProjects/pretrained_nets/fully_conv_net_on_smtsmt_20170627/model.checkpoint,
-                   freeze: True}
+                   freeze: False}
   decoder: LSTMDecoder
   decoder_args:
   decoder_kwargs: {embedding_size: 256,
@@ -46,25 +46,26 @@ scheduler:
 
 training:
   num_epochs: 200
-  clip_grad: 1
+  clip_grad:
   teacher_force: True
   verbose: False
 
 validation:
   frequency: 1
-  teacher_force: False
+  teacher_force: True
   verbose: True
 
 criteria:
-  score: loss
-  higher_is_better: False
+  score: accuracy
+  higher_is_better: True
 
 targets:
-  caption_type: template
+  caption_type: label
 
 tokenizer:
-  kwargs: {user_maxlen: 10}
+  kwargs: {user_maxlen: 13, cutoff: 300}
 
 logging:
   verbose: True
-  tensorboard_frequency:
+  tensorboard_frequency: 1000
+
