--- a/src/main/configs/jester1024.yaml
+++ b/src/main/configs/jester1024.yaml
@@ -1,7 +1,7 @@
 paths:
-  videos_folder: &vidpath /data-ssd/20bn-somethingsomething-2017-10-31/
+  videos_folder: &vidpath /home/waseem/data/20bn-somethingsomething-2017-10-31/
 
-  checkpoint_folder: /home/guillaume/model_checkpoints/captioning/jester1024_cutoff_5_unfrozen_lbl/
+  checkpoint_folder: /home/waseem/Models/jester1024_cutoff_5_unfrozen_lbl_METEOR
 
   train_annot: &train_annot /data/20bn-somethingsomething/json/train_20171031.json.gz
   validation_annot: /data/20bn-somethingsomething/json/validation_20171031.json.gz
@@ -9,7 +9,7 @@ paths:
 
 pretrained:
   pretrained_folder:
-  pretrained_file: model.latest
+  pretrained_file: model.best
 
 device:
   synchronize_gpu: &sync True
@@ -22,7 +22,7 @@ model:
   type: EncoderDecoder
   encoder: BIJesterEncoder
   encoder_args:
-  encoder_kwargs: {pretrained_path: /home/guillaume/model_checkpoints/captioning/bijesternet1024_step1/model.checkpoint,
+  encoder_kwargs: {pretrained_path: /home/waseem/Models/jester_net_on_smtsmt_20171031/model.checkpoint,
                    freeze: False}
   decoder: LSTMDecoder
   decoder_args:
@@ -35,7 +35,7 @@ loss:
 
 optimizer:
   type: &optimizer Adam
-  kwargs: {lr: 0.001}
+  kwargs: {lr: 0.0001}
 
 scheduler:
   type: ReduceLROnPlateau
@@ -57,7 +57,7 @@ validation:
   verbose: True
 
 criteria:
-  score: caption_accuracy
+  score: METEOR
   higher_is_better: True
 
 targets:
