--- a/src/main/configs/jester1024.yaml
+++ b/src/main/configs/jester1024.yaml
@@ -1,7 +1,7 @@
 paths:
   videos_folder: &vidpath /data-ssd/20bn-somethingsomething-2017-10-31/
 
-  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/jester1024_new_cutoff_5_unfrozen_tmp_lr=0.0001/
+  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/jester1024_sssssssssssssssss/
 
   train_annot: &train_annot /data/20bn-somethingsomething/json/train_20171031.json.gz
   validation_annot: /data/20bn-somethingsomething/json/validation_20171031.json.gz
@@ -10,7 +10,7 @@ paths:
 
 
 pretrained:
-  pretrained_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/jester1024_new_cutoff_5_unfrozen_tmp/
+  pretrained_folder:
   pretrained_file: model.latest
 
 device:
@@ -18,7 +18,7 @@ device:
   gpus: &gpus [0]
 
 dataloaders:
-  kwargs: {batch_size: 8, num_workers: 8, pin_memory: False}
+  kwargs: {batch_size: 2, num_workers: 8, pin_memory: False}
 
 model:
   type: EncoderDecoder
@@ -37,7 +37,9 @@ loss:
 
 optimizer:
   type: &optimizer Adam
-  kwargs: {lr: 0.0001}
+  kwargs: {lr: 0.000
+
+  1}
 
 scheduler:
   type: ReduceLROnPlateau
@@ -55,7 +57,7 @@ training:
 
 validation:
   frequency: 1
-  teacher_force: True
+  teacher_force: False
   verbose: True
 
 criteria:
