--- a/src/main/configs/jester1024.yaml
+++ b/src/main/configs/jester1024.yaml
@@ -1,7 +1,7 @@
 paths:
-  videos_folder: &vidpath /data-ssd/20bn-somethingsomething-2017-10-31/
+  videos_folder: &vidpath /home/waseem/data/20bn-somethingsomething-2017-10-31
 
-  checkpoint_folder: /home/guillaume/model_checkpoints/captioning/jester1024_cutoff_5_unfrozen_lbl_lr=0.0001_coupled/
+  checkpoint_folder: /home/waseem/Models/CoupledLSTM_nonlinear_init_hidden
 
   train_annot: &train_annot /data/20bn-somethingsomething/json/train_20171031.json.gz
   validation_annot: /data/20bn-somethingsomething/json/validation_20171031.json.gz
@@ -13,7 +13,7 @@ pretrained:
 
 device:
   synchronize_gpu: &sync True
-  gpus: &gpus [1]
+  gpus: &gpus [0]
 
 dataloaders:
   kwargs: {batch_size: 8, num_workers: 8, pin_memory: False}
@@ -22,7 +22,7 @@ model:
   type: EncoderDecoder
   encoder: BIJesterEncoder
   encoder_args:
-  encoder_kwargs: {pretrained_path: /home/guillaume/model_checkpoints/captioning/bijesternet1024_step1/model.checkpoint,
+  encoder_kwargs: {pretrained_path: /home/waseem/Models/bijesternet1024_step1/model.checkpoint,
                    freeze: False}
   decoder: CoupledLSTMDecoder
   decoder_args:
@@ -35,7 +35,7 @@ loss:
 
 optimizer:
   type: &optimizer Adam
-  kwargs: {lr: 0.0001}
+  kwargs: {lr: 1.0e-4}
 
 scheduler:
   type: ReduceLROnPlateau
@@ -43,7 +43,8 @@ scheduler:
            min_lr: 1.0e-8,
            optimizer: *optimizer,
            patience: 2,
-           threshold: 1.0e-4}
+           threshold: 1.0e-4,
+           verbose: True}
 
 training:
   num_epochs: 200
@@ -57,7 +58,7 @@ validation:
   verbose: True
 
 criteria:
-  score: caption_accuracy
+  score: METEOR
   higher_is_better: True
 
 targets:
