--- a/src/main/configs/integration_test.yaml
+++ b/src/main/configs/integration_test.yaml
@@ -1,8 +1,8 @@
 paths:
-  videos_folder: /home/waseem/data/20bn-somethingsomething-2017-10-31
+  videos_folder: fake_data/videos
   checkpoint_folder: checkpoint_sample/
 
-  train_annot: &train_annot /data/20bn-somethingsomething/json/validation_20171031.json.gz
+  train_annot: &train_annot fake_data/json/fake.json
   validation_annot: *train_annot
   test_annot: *train_annot
 
@@ -12,10 +12,10 @@ pretrained:
 
 device:
   synchronize_gpu: True
-  gpus: [0]
+  gpus:
 
 dataloaders:
-  kwargs: {batch_size: 20, num_workers: 16, pin_memory: False}
+  kwargs: {batch_size: 2, num_workers: 16, pin_memory: False}
 
 model:
   type: EncoderDecoder
@@ -45,7 +45,7 @@ scheduler:
            verbose: True}
 
 training:
-  num_epochs: 200
+  num_epochs: 2
   clip_grad: 1
   teacher_force: True
   verbose: True
