--- a/src/main/configs/jester1024.yaml
+++ b/src/main/configs/jester1024.yaml
@@ -10,8 +10,8 @@ paths:
 
 
 pretrained:
-  pretrained_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/jester1024_new_cutoff_5_unfrozen_tmp/
-  pretrained_file: model.latest
+  pretrained_folder:
+  pretrained_file: model.best
 
 device:
   synchronize_gpu: &sync True
