--- a/src/main/configs/load_model_test.yaml
+++ b/src/main/configs/load_model_test.yaml
@@ -21,7 +21,7 @@ model:
   encoder: CNN3dLSTMEncoder
   encoder_args:
   encoder_kwargs: {encoder_output_size: &enc_out_size 25}
-  decoder: LSTMDecoder
+  decoder: CoupledLSTMDecoder
   decoder_args:
   decoder_kwargs: {embedding_size: 25,
                    hidden_size: *enc_out_size,
@@ -41,7 +41,8 @@ scheduler:
            min_lr: 1.0e-8,
            optimizer: *optimizer,
            patience: 3,
-           threshold: 1.0e-4}
+           threshold: 1.0e-4,
+           verbose: True}
 
 training:
   num_epochs: 2
@@ -55,8 +56,8 @@ validation:
   verbose: True
 
 criteria:
-  score: loss
-  higher_is_better: False
+  score: METEOR
+  higher_is_better: True
 
 targets:
   caption_type: template
