--- a/src/main/configs/jester1024.yaml
+++ b/src/main/configs/jester1024.yaml
@@ -1,7 +1,7 @@
 paths:
   videos_folder: &vidpath /home/waseem/data/20bn-somethingsomething-2017-10-31
 
-  checkpoint_folder: /home/waseem/Models/CoupledLSTM_nonlinear_init_hidden
+  checkpoint_folder: /home/waseem/Models/CoupledLSTM_nonlinear_init_hidden_caption_accuracy
 
   train_annot: &train_annot /data/20bn-somethingsomething/json/train_20171031.json.gz
   validation_annot: /data/20bn-somethingsomething/json/validation_20171031.json.gz
@@ -59,7 +59,7 @@ validation:
   verbose: True
 
 criteria:
-  score: METEOR
+  score: caption_accuracy
   higher_is_better: True
 
 targets:
