--- a/src/main/configs/jester1024.yaml
+++ b/src/main/configs/jester1024.yaml
@@ -1,7 +1,7 @@
 paths:
   videos_folder: &vidpath /data-ssd/20bn-somethingsomething-2017-10-31/
 
-  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/clapnet/
+  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/clapnet_lbl_step2_lr=0.0001_w=1/
 
   train_annot: &train_annot /data/20bn-somethingsomething/json/train_20171031.json.gz
   validation_annot: /data/20bn-somethingsomething/json/validation_20171031.json.gz
@@ -10,8 +10,8 @@ paths:
 
 
 pretrained:
-  pretrained_folder:
-  pretrained_file: model.best
+  pretrained_folder:  /home/farzaneh/PycharmProjects/pytorch-captioning/results/clapnet_lbl/
+  pretrained_file: model_2.latest
 
 device:
   synchronize_gpu: &sync True
@@ -59,11 +59,11 @@ validation:
   verbose: True
 
 criteria:
-  score: caption_accuracy
+  score: classif_accuracy
   higher_is_better: True
 
 targets:
-  caption_type: template
+  caption_type: label
 
 tokenizer:
   kwargs: {user_maxlen: 13, cutoff: 5}
