--- a/src/main/configs/jester1024.yaml
+++ b/src/main/configs/jester1024.yaml
@@ -72,3 +72,7 @@ logging:
   verbose: True
   tensorboard_frequency: 1000
 
+preprocess:
+  crop_size: [48, 96, 96]
+  scale: 64.
+  input_resize: [128, 128]
