--- a/src/main/configs/resnet18.yaml
+++ b/src/main/configs/resnet18.yaml
@@ -1,7 +1,7 @@
 paths:
   videos_folder: &vidpath /data-ssd/20bn-somethingsomething/videos_gulp/
 
-  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/resnet18_cutoff_10_unfrozen_lbl/
+  checkpoint_folder: /home/fmahdisoltani/pytorch-captioning/results/resnet18_new/
 
   train_annot: &train_annot /data/20bn-somethingsomething/json/train_20171004.json.gz
   validation_annot: /data/20bn-somethingsomething/json/validation_20171004.json.gz
@@ -13,7 +13,7 @@ pretrained:
 
 device:
   synchronize_gpu: &sync True
-  gpus: &gpus [0]
+  gpus: &gpus [0, 1, 2, 3 ]
 
 dataloaders:
   kwargs: {batch_size: 8, num_workers: 8, pin_memory: False}
