--- a/src/main/configs/jester1024.yaml
+++ b/src/main/configs/jester1024.yaml
@@ -1,17 +1,17 @@
 paths:
-  videos_folder: &vidpath /data-ssd/20bn-somethingsomething/videos_gulp/
+  videos_folder: &vidpath /data-ssd/20bn-somethingsomething-2017-10-31/
 
-  checkpoint_folder: /home/fmahdisoltani/pytorch-captioning/results/clapnet_lbl_step2_lr=0.0001_w=1/
+  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/clapnet_lbl_step3_lr001_w1_factor0.3
 
-  train_annot: &train_annot /data/20bn-somethingsomething/json/train_20171004.json.gz
-  validation_annot: /data/20bn-somethingsomething/json/validation_20171004.json.gz
+  train_annot: &train_annot /data/20bn-somethingsomething/json/train_20171031.json.gz
+  validation_annot: /data/20bn-somethingsomething/json/validation_20171031.json.gz
   test_annot: /data/20bn-somethingsomething/json/test_20171004.json.gz
 
 
 
 pretrained:
-  pretrained_folder:
-  pretrained_file: model_2.latest
+  pretrained_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/clapnet_lbl_step2_lr0001_w1
+  pretrained_file: model2.best
 
 device:
   synchronize_gpu: &sync True
@@ -24,7 +24,7 @@ model:
   type: EncoderDecoder
   encoder: BIJesterEncoder
   encoder_args:
-  encoder_kwargs: {pretrained_path: /home/fmahdisoltani/pretrained_nets/jester_net_on_smtsmt_20171031/model.checkpoint,
+  encoder_kwargs: {pretrained_path: ,
                    freeze: False}
   decoder: CoupledLSTMDecoder
   decoder_args:
@@ -37,14 +37,14 @@ loss:
 
 optimizer:
   type: &optimizer Adam
-  kwargs: {lr: 0.0001}
+  kwargs: {lr: 0.001}
 
 scheduler:
   type: ReduceLROnPlateau
-  kwargs: {factor: 0.1,
+  kwargs: {factor: 0.3,
            min_lr: 1.0e-8,
            optimizer: *optimizer,
-           patience: 3,
+           patience: 1,
            threshold: 1.0e-4}
 
 training:
