--- a/src/main/configs/gestures_all.yaml
+++ b/src/main/configs/gestures_all.yaml
@@ -1,37 +1,70 @@
 paths:
-  videos_folder: &vidpath /data/20bn-gestures/videos_npz
-  annot_folder: /data/20bn-gestures/json
-  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/checkpoint_gestures_all/
+  videos_folder: &vidpath /data-ssd/20bn-jester/videos_gulp/
 
-  train_annot:  /data/20bn-gestures/json/train_20170626.json.gz
-  validation_annot: /data/20bn-gestures/json/validation_20170626.json.gz
-  test_annot: /data/20bn-gestures/json/test_20170626.json.gz
+  checkpoint_folder: /home/fmahdisoltani/pytorch-captioning/results/gestures/
 
-  pretrained_path:
+  train_annot: &train_annot /data/20bn-jester/json/train_20171031.json.gz
+  validation_annot: /data/20bn-jester/json/validation_20171031.json.gz
+  test_annot: /data/20bn-jester/json/test_20171031.json.gz
+
+pretrained:
+  pretrained_folder:
+  pretrained_file: model.latest
 
 device:
   synchronize_gpu: &sync True
-  gpus: [0]
+  gpus: &gpus [0, 1, 2, 3]
 
 dataloaders:
-  batch_size: &b 80
-  kwargs: {batch_size: *b, num_workers: 16, pin_memory: False}
+  kwargs: {batch_size: 32, num_workers: 8, pin_memory: False}
 
 model:
-  type:
+  type: EncoderDecoder
+  encoder: CNN3dLSTMEncoder
+  encoder_args:
+  encoder_kwargs: {encoder_output_size: 1024}
+  decoder: LSTMDecoder
+  decoder_args:
+  decoder_kwargs: {embedding_size: 256,
+                   hidden_size: 1024,
+                   num_lstm_layers: 1}
+
+loss:
+  type: SequenceCrossEntropy
+
+optimizer:
+  type: &optimizer Adam
+  kwargs: {lr: 0.0001}
+
+scheduler:
+  type: ReduceLROnPlateau
+  kwargs: {factor: 0.1,
+           min_lr: 1.0e-8,
+           optimizer: *optimizer,
+           patience: 3,
+           threshold: 1.0e-4}
 
 training:
   num_epochs: 200
-  learning_rate: &lr 0.1
+  clip_grad:
   teacher_force: True
-  verbose: True
+  verbose: False
 
 validation:
   frequency: 1
-  teacher_force: False
+  teacher_force: True
   verbose: True
 
 criteria:
-  score: loss
-  higher_is_better: False
+  score: caption_accuracy
+  higher_is_better: True
 
+targets:
+  caption_type: label
+
+tokenizer:
+  kwargs: {user_maxlen: 13, cutoff: 10}
+
+logging:
+  verbose: True
+  tensorboard_frequency: 1000
