--- a/src/main/configs/jester1024.yaml
+++ b/src/main/configs/jester1024.yaml
@@ -72,3 +72,18 @@ logging:
   verbose: True
   tensorboard_frequency: 1000
 
+dataset:
+  training_set:
+    type: GulpVideoDataset
+    kwargs: {gulp_dir: *vidpath }
+
+  validation_set:
+    type: GulpVideoDataset
+    kwargs: {gulp_dir: *vidpath}
+
+preprocess:
+  crop_size: [24, 96, 96]
+  scale: 64.
+  input_size: [96, 96]
+
+
