--- a/src/main/configs/jester1024.yaml
+++ b/src/main/configs/jester1024.yaml
@@ -71,3 +71,16 @@ tokenizer:
 logging:
   verbose: True
   tensorboard_frequency: 1000
+
+dataset:
+  training_set:
+    type: GulpVideoDataset
+    kwargs: {gulp_dir: *vidpath, size: [128, 128]}
+
+  validation_set:
+    type: GulpVideoDataset
+    kwargs: {gulp_dir: *vidpath, size: [128, 128]}
+
+preprocess:
+  crop_size: [24, 96, 96]
+  scale: 64.
