--- a/src/main/configs/jester1024.yaml
+++ b/src/main/configs/jester1024.yaml
@@ -1,7 +1,7 @@
 paths:
   videos_folder: &vidpath /data-ssd/20bn-somethingsomething-2017-10-31/
 
-  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/clapnet_lbl_step3_lr001_w1_factor0.3
+  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/clapnet_lbl_step3_lr001_w1_factor0.5
 
   train_annot: &train_annot /data/20bn-somethingsomething/json/train_20171031.json.gz
   validation_annot: /data/20bn-somethingsomething/json/validation_20171031.json.gz
@@ -10,15 +10,15 @@ paths:
 
 
 pretrained:
-  pretrained_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/clapnet_lbl_step2_lr0001_w1
-  pretrained_file: model2.best
+  pretrained_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/clapnet_lbl_step3_lr001_w1_factor0.7
+  pretrained_file: model.best
 
 device:
   synchronize_gpu: &sync True
-  gpus: &gpus [0,1]
+  gpus: &gpus [0]
 
 dataloaders:
-  kwargs: {batch_size: 16, num_workers: 8, pin_memory: False}
+  kwargs: {batch_size: 8, num_workers: 8, pin_memory: False}
 
 model:
   type: EncoderDecoder
@@ -37,11 +37,11 @@ loss:
 
 optimizer:
   type: &optimizer Adam
-  kwargs: {lr: 0.001}
+  kwargs: {lr: 0.0001}
 
 scheduler:
   type: ReduceLROnPlateau
-  kwargs: {factor: 0.3,
+  kwargs: {factor: 0.5,
            min_lr: 1.0e-8,
            optimizer: *optimizer,
            patience: 1,
