add argument for decoder

--- a/src/main/configs/jester1024.yaml
+++ b/src/main/configs/jester1024.yaml
@@ -29,6 +29,7 @@ model:
   decoder: LSTMDecoder
   decoder_args:
   decoder_kwargs: {embedding_size: 256,
+                   encoder_output_size: 1024,
                    hidden_size: 1024,
                    num_lstm_layers: 2}
 
