--- a/src/main/configs/jester1024.yaml
+++ b/src/main/configs/jester1024.yaml
@@ -51,7 +51,7 @@ scheduler:
 training:
   num_epochs: 200
   clip_grad:
-  teacher_force: Fa
+  teacher_force: False
   verbose: False
 
 validation:
