--- a/src/main/configs/jester1024.yaml
+++ b/src/main/configs/jester1024.yaml
@@ -1,14 +1,16 @@
 paths:
   videos_folder: &vidpath /data-ssd/20bn-somethingsomething-2017-10-31/
 
-  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/clapnet_tesssssst
+  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/clapnet_lbl_step3_lr001_w1_factor0.5
 
   train_annot: &train_annot /data/20bn-somethingsomething/json/train_20171031.json.gz
   validation_annot: /data/20bn-somethingsomething/json/validation_20171031.json.gz
-  test_annot: /data/20bn-somethingsomething/json/test_20171031.json.gz
+  test_annot: /data/20bn-somethingsomething/json/test_20171004.json.gz
+
+
 
 pretrained:
-  pretrained_folder:
+  pretrained_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/clapnet_lbl_step3_lr001_w1_factor0.7
   pretrained_file: model.best
 
 device:
@@ -22,23 +24,16 @@ model:
   type: EncoderDecoder
   encoder: BIJesterEncoder
   encoder_args:
-  encoder_kwargs: {pretrained_path: /home/farzaneh/PycharmProjects/pretrained_nets/jester_net_on_smtsmt_20171031/model.checkpoint ,
+  encoder_kwargs: {pretrained_path: ,
                    freeze: False}
   decoder: CoupledLSTMDecoder
   decoder_args:
   decoder_kwargs: {embedding_size: 256,
                    hidden_size: 1024,
-                   num_lstm_layers: 2}
+                   num_lstm_layers: 1}
 
 loss:
-  caption_loss: SequenceCrossEntropy
-  balanced: True
-  w_caption_loss: 0.99
-
-  classif_loss: CrossEntropy
-  w_classif_loss: 0.01
-
-
+  type: SequenceCrossEntropy
 
 optimizer:
   type: &optimizer Adam
@@ -46,10 +41,10 @@ optimizer:
 
 scheduler:
   type: ReduceLROnPlateau
-  kwargs: {factor: 0.1,
+  kwargs: {factor: 0.5,
            min_lr: 1.0e-8,
            optimizer: *optimizer,
-           patience: 2,
+           patience: 1,
            threshold: 1.0e-4}
 
 training:
