--- a/src/main/configs/two_stream.yaml
+++ b/src/main/configs/two_stream.yaml
@@ -1,7 +1,7 @@
 paths:
   videos_folder: &vidpath /data-ssd/20bn-somethingsomething-2017-10-31/
 
-  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/Tesssssst
+  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/Test
 
   train_annot: &train_annot /data/20bn-somethingsomething/json/train_20171031.json.gz
   validation_annot: /data/20bn-somethingsomething/json/validation_20171031.json.gz
@@ -23,12 +23,14 @@ model:
   encoder: TwoStreamEncoder
   encoder_args:
   encoder_kwargs: {encoder_output_size: 1024,
+                   c2d_output_size: 0,
                    c3d_output_size: 256}
   decoder: CoupledLSTMDecoder
   decoder_args:
   decoder_kwargs: {embedding_size: 256,
                    hidden_size: 1024,
-                   num_lstm_layers: 2}
+                   num_lstm_layers: 2,
+                   fc_size: 1024}
 
 loss:
   caption_loss: SequenceCrossEntropy
@@ -68,7 +70,7 @@ criteria:
   higher_is_better: True
 
 targets:
-  caption_type: template
+  caption_type: label
 
 tokenizer:
   kwargs: {user_maxlen: 13, cutoff: 5}
