Update config file and main script

--- a/src/main/configs/sth_sth_v2.yaml
+++ b/src/main/configs/sth_sth_v2.yaml
@@ -1,11 +1,11 @@
 paths:
-  videos_folder: &vidpath /data/20bn-something-something-v2-gulp/
+  videos_folder: &vidpath /data-ssd/v2-gulp-128/
 
-  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/Tesssssst
+  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/v2_labels_classif0.5_cap0.5
 
-  train_annot: &train_annot /data/20bn-something-something-v2/something-something-v2-train.csv
-  validation_annot: /data/20bn-something-something-v2/something-something-v2-validation.csv
-  test_annot: /data/20bn-something-something-v2/something-something-v2-validation.csv
+  train_annot: &train_annot /data/20bn-something-something-v2/v2-train.json
+  validation_annot: /data/20bn-something-something-v2/v2-validation.json
+  test_annot: /data/20bn-something-something-v2/v2-validation.json
 
 
 pretrained:
@@ -23,8 +23,7 @@ model:
   type: EncoderDecoder
   encoder: BIJesterEncoder
   encoder_args:
-  encoder_kwargs: {pretrained_path: /home/farzaneh/PycharmProjects/pretrained_nets/jester_net_on_smtsmt_20171031/model.checkpoint,
-                  freeze: False}
+  encoder_kwargs: {pretrained_path: , freeze: False}
   decoder: CoupledLSTMDecoder
   decoder_args:
   decoder_kwargs: {embedding_size: 256,
@@ -34,10 +33,10 @@ model:
 loss:
   caption_loss: SequenceCrossEntropy
   balanced: False
-  w_caption_loss: 0.99
+  w_caption_loss: 0.5
 
   classif_loss: CrossEntropy
-  w_classif_loss: 0.01
+  w_classif_loss: 0.5
 
 
 
